test: adapt remaining tests to Jackson 2, JDK 17 and Spring AI 1.x
Jackson 2 imports (com.fasterxml.jackson), valueStream->StreamSupport,
JsonProcessingException handling, and holder-based MCP auth in the
remaining test files.