@@ -29,6 +29,6 @@ class QueryRouterTest {
         assertEquals(RagOutcomeStatus.DEGRADED, outcome.status());
         assertEquals("default-project", outcome.data().projectId());
         assertEquals("fallback", outcome.data().routingMethod());
-        assertEquals("ROUTING_LLM_UNAVAILABLE", outcome.warnings().getFirst().code());
+        assertEquals("ROUTING_LLM_UNAVAILABLE", outcome.warnings().get(0).code());
     }
 }
